add custom migration for superuser and configure env variables using django-environ package

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,django,linux,macos,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,django,linux,macos,venv
-
+env/.env
 ### Django ###
 *.log
 *.pot
@@ -134,7 +134,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
-env/
+
 venv/
 ENV/
 env.bak/
