--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,django,linux,macos,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,django,linux,macos,venv
 env/.env
+staticfiles/*
+
+
 ### Django ###
 *.log
 *.pot
