--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 django = "==4.1"
 django-environ = "==0.9.0"
+pytest-django = "*"
+pytest-cov = "==3.0.0"
 
 [dev-packages]
 
