--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==4.1"
 django-environ = "==0.9.0"
 pytest-django = "*"
 pytest-cov = "==3.0.0"
+dj-database-url = "==1.0.0"
 
 [dev-packages]
 
