--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 attrs==22.1.0
 backports.zoneinfo==0.2.1
+coverage==6.4.3
+dj-database-url==1.0.0
 Django==4.1
 django-environ==0.9.0
 iniconfig==1.1.1
@@ -9,6 +11,7 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-cov==3.0.0
 pytest-django==4.5.2
 sqlparse==0.4.2
 tomli==2.0.1
